Bug 111450 - SPIR-V shader causes assertion failure `!"Unsupported deref type"' in ir_build_deref_offset
Summary: SPIR-V shader causes assertion failure `!"Unsupported deref type"' in ir_buil...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks: mesa-19.2
  Show dependency treegraph
 
Reported: 2019-08-21 06:30 UTC by Alastair Donaldson
Modified: 2019-09-16 17:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Amber test exposing the problem (10.91 KB, text/plain)
2019-08-21 06:30 UTC, Alastair Donaldson
Details

Description Alastair Donaldson 2019-08-21 06:30:49 UTC
Created attachment 145111 [details]
Amber test exposing the problem

Running:

amber write-before-break.amber

leads to:

src/compiler/nir/nir_deref.c:311: nir_build_deref_offset: Assertion `!"Unsupported deref type"' failed.

Build: Mesa 19.2.0-devel (git-861c2b8d31) (Debug)
Device: Intel(R) HD Graphics 630 (Kaby Lake GT2)
Comment 1 Denis 2019-08-21 12:52:09 UTC
hi, bisect results below:


8fb8ebfbb05d3323481c8ba6d320b3a3580bad99 is the first bad commit
commit 8fb8ebfbb05d3323481c8ba6d320b3a3580bad99
Author: Ian Romanick <ian.d.romanick@intel.com>
Date: Tue May 22 18:56:41 2018 -0700
Comment 2 Denis 2019-08-21 13:08:26 UTC
I am sorry, I mixed comments in issues.

Correct bisection result is:

8d8222461f9d7f497d657c2c0eff70820986429b is the first bad commit
commit 8d8222461f9d7f497d657c2c0eff70820986429b
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date: Mon Jul 23 22:20:41 2018 -0700

intel/nir: Enable nir_opt_find_array_copies
Comment 3 Sergii Romantsov 2019-08-29 09:21:05 UTC
Potential fix:
https://gitlab.freedesktop.org/mesa/mesa/merge_requests/1802
Comment 4 Sergii Romantsov 2019-09-16 11:55:10 UTC
Should be fixed with:

2bfcf043456411a6037404d9afae9760964c9b48
Author: Sergii Romantsov <sergii.romantsov@globallogic.com>
Date:   Thu Aug 29 10:58:38 2019 +0300

    nir/large_constants: pass after lowering copy_deref
    
    v2: by J.Ekstrand suggestion moved lowering of large
        constants after lowering of copy_deref is done.
    
    CC: Jason Ekstrand <jason@jlekstrand.net>
    CC: Caio Marcelo de Oliveira Filho <caio.oliveira@intel.com>
    Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111450
    Signed-off-by: Sergii Romantsov <sergii.romantsov@globallogic.com>
Comment 5 Mark Janes 2019-09-16 17:40:05 UTC
I think the commit is missing a fixes or CC tag, since it fixes a blocker for mesa 19.2.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.